apps/hedgedoc/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "hedgedoc"
spec:
  ports:
    - port: 80
      targetPort: "hedgedoc"
  selector:
    app.kubernetes.io/name: "hedgedoc"
